cabal-version:      3.0
name:               tasty-cache
version:            0.1.0.0
synopsis:           Tasty ingredient that skips unchanged tests using GHC HIE files
description:
  A Tasty ingredient that fingerprints each test against its source bytes and
  the transitive closure of its dependencies in the HIE identifier graph.
  Tests whose fingerprint matches the cache are replaced with an instant-pass
  placeholder; only stale tests execute.
  .
  Add @-fwrite-ide-info -hiedir .hie@ to both your library and test-suite
  stanzas, then replace 'defaultMain' with 'defaultMainWithHieCache'.
  .
  Requires GHC >= 9.4 (tested on 9.4 through 9.14).
license:            MIT
license-file:       LICENSE
copyright:          (c) 2026 Noon van der Silk
author:             Noon van der Silk
maintainer:         Noon van der Silk <noonsilk@gmail.com>
homepage:           https://github.com/silky/tasty-cache
bug-reports:        https://github.com/silky/tasty-cache/issues
category:           Testing
build-type:         Simple
extra-doc-files:    README.md CHANGELOG.md
tested-with:        GHC == 9.4.8
                 || == 9.6.7
                 || == 9.8.4
                 || == 9.10.3
                 || == 9.12.4
                 || == 9.14.1

source-repository head
  type:     git
  location: https://github.com/silky/tasty-cache

library
  exposed-modules:  Test.Tasty.HieCache
                    Test.Tasty.HieCache.Internal
  hs-source-dirs:   src
  build-depends:
    , base        >= 4.17 && < 5
    , bytestring  < 0.13
    , containers  < 0.9
    , directory   < 1.4
    , filepath    < 1.6
    , ghc         >= 9.4 && < 9.15
    , tasty       < 1.6
  default-language: Haskell2010
  default-extensions:
    DerivingStrategies
  ghc-options:      -Wall -fwrite-ide-info -hiedir .hie

test-suite tests
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  other-modules:
    Arithmetic
    CPPDemo
    Diamond
    Expr
    FalseNegatives
    Lib
    Meta
    Parity
  build-depends:
    , base             >= 4.17 && < 5
    , bytestring
    , containers
    , tasty-cache
    , tasty
    , tasty-hunit
    , template-haskell
  default-language: Haskell2010
  default-extensions:
    DerivingStrategies
  ghc-options:      -Wall -fwrite-ide-info -hiedir .hie
